# teste_tecnico_nuvia

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/nuvia/: app.py  bias_detection.py  wikipedia_fetcher.py
src/nuvia/adapters/nlp/: embedding_bias_detector.py  hybrid_bias_detector.py  nltk_bias_detector.py  palavras_enviesadas.py
src/nuvia/adapters/wikipedia/: wikipedia_scraper.py
src/nuvia/application/services/: bias_detection_service.py
src/nuvia/application/use_cases/: analyze_article_use_case.py
src/nuvia/domain/entities/: article.py
src/nuvia/domain/repositories/: biased_words_repository.py
src/nuvia/domain/services/: bias_analysis_service.py
src/nuvia/domain/value_objects/: bias_segment.py
src/nuvia/interface/: streamlit.py  streamlit_app.py
src/nuvia/interface/web/: main.py
